--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,20 @@
 {
   "extends": "./tsconfig.paths.json",
   "compilerOptions": {
-    "allowJs": true,
-    "module": "ESNext",
-    "declaration": true,
-    "declarationMap": true,
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "declaration": false, // <-- turn off .d.ts generation
+    "declarationMap": false, // <-- turn off declaration maps
     "esModuleInterop": true,
-    "outDir": "./build",
+    "outDir": "./dist",
     "strict": true,
-    "target": "ESNext",
+    "target": "ES2021",
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "moduleResolution": "bundler",
-    "jsx": "react-jsx",
-    "isolatedModules": true,
-    "noEmit": true,
-    "types": ["vite/client"],
-
-    "skipDefaultLibCheck": true
+    "emitDecoratorMetadata": true
   },
   "include": ["**/*"],
-
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "resources/js"]
 }
