--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "server.ts",
   "scripts": {
-    "start": "node -r tsconfig-paths/register server.js",
+    "start": "bun -r tsconfig-paths/register ./build/server.js",
     "dev": "bun --watch -r tsconfig-paths/register server.ts",
     "watch": "vite",
     "build": "tsc && bun artisanNode build",
@@ -17,100 +17,101 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@inertiajs/react": "^2.2.8",
+    "@inertiajs/react": "^2.3.6",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
-    "@radix-ui/react-aspect-ratio": "^1.1.7",
-    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-aspect-ratio": "^1.1.8",
+    "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-hover-card": "^1.1.15",
-    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-menubar": "^1.1.16",
     "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-popover": "^1.1.15",
-    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-progress": "^1.1.8",
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slider": "^1.3.6",
-    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@tailwindcss/vite": "^4.1.14",
+    "@tailwindcss/vite": "^4.1.18",
     "app-root-path": "^3.1.0",
-    "bcryptjs": "^3.0.2",
+    "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "cli-table3": "^0.6.5",
-    "cloudinary": "^2.7.0",
+    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "colors": "^1.4.0",
-    "commander": "^14.0.1",
+    "commander": "^14.0.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
-    "express": "^5.1.0",
+    "express": "^5.2.1",
     "express-fileupload": "^1.5.2",
     "express-session": "^1.18.2",
-    "fs-extra": "^11.3.2",
+    "fs-extra": "^11.3.3",
     "inflection": "^3.0.2",
-    "jcc-express-mvc": "^1.6.18",
-    "jsonwebtoken": "^9.0.2",
+    "jcc-express-mvc": "^1.7.12",
+    "jsonwebtoken": "^9.0.3",
     "knex": "^3.1.0",
     "lucide-react": "^0.545.0",
     "morgan": "^1.10.1",
-    "mysql2": "^3.15.2",
-    "nodemailer": "^7.0.9",
+    "mysql2": "^3.16.0",
+    "nodemailer": "^7.0.12",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "reflect-metadata": "^0.2.2",
     "serve-favicon": "^2.5.1",
-    "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1",
-    "tailwind-merge": "^3.3.1",
+    "socket.io": "^4.8.3",
+    "socket.io-client": "^4.8.3",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^13.0.0",
-    "validator": "^13.15.15"
+    "validator": "^13.15.26"
   },
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
+    "@types/bun": "^1.3.5",
     "@types/connect-flash": "^0.0.40",
-    "@types/cookie-parser": "^1.4.9",
+    "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
+    "@types/express": "^5.0.6",
     "@types/express-fileupload": "^1.5.1",
     "@types/express-session": "^1.18.2",
     "@types/fs-extra": "^11.0.4",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
-    "@types/node": "^24.7.2",
-    "@types/nodemailer": "^7.0.2",
+    "@types/node": "^24.10.4",
+    "@types/nodemailer": "^7.0.4",
     "@types/passport-local": "^1.0.38",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@types/serve-favicon": "^2.5.7",
-    "@types/validator": "^13.15.3",
-    "@typescript-eslint/eslint-plugin": "^8.46.1",
-    "@typescript-eslint/parser": "^8.46.1",
-    "@vitejs/plugin-react": "^5.0.4",
-    "autoprefixer": "^10.4.21",
+    "@types/validator": "^13.15.10",
+    "@typescript-eslint/eslint-plugin": "^8.52.0",
+    "@typescript-eslint/parser": "^8.52.0",
+    "@vitejs/plugin-react": "^5.1.2",
+    "autoprefixer": "^10.4.23",
     "dotenv": "^17.2.3",
-    "eslint": "^9.37.0",
+    "eslint": "^9.39.2",
     "laravel-vite-plugin": "^2.0.1",
     "postcss": "^8.5.6",
-    "prettier": "^3.6.2",
+    "prettier": "^3.7.4",
     "prettier-plugin-blade": "^2.1.21",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "tailwindcss": "^4.1.14",
+    "tailwindcss": "^4.1.18",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.9.3",
-    "vite": "^7.1.9"
+    "vite": "^7.3.0"
   }
 }
