--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "declaration": false, // <-- turn off .d.ts generation
     "declarationMap": false, // <-- turn off declaration maps
     "esModuleInterop": true,
-    "outDir": "./dist",
+    "outDir": "./build",
     "strict": true,
     "target": "ES2021",
     "skipLibCheck": true,
